--- a/problem-6-2.html
+++ b/problem-6-2.html
@@ -78,16 +78,47 @@
     </header>
     <main>
       <!-- ==================  Завдання 6-2 ================ -->
-      <section class="section-layout">
-        <div class="container">
-          <h2 class="visually-hidden">6-2</h2>
 
-          <ul id="ingredients"></ul>
+      <section class="section-layout">
+        <div class="container section-hero-container">
+          <h2 class="section-hero-title js-section-hero-title">About us</h2>
+          <img
+            class="section-hero-image js-section-hero-image"
+            src="https://picsum.photos/id/9/320/240"
+            alt="A laptop"
+            width="500"
+          />
+          <div class="section-hero-buttons js-section-hero-buttons">
+            <button
+              class="section-hero-button"
+              clatype="button"
+              data-action="add"
+            >
+              Add
+            </button>
+            <button
+              class="section-hero-button"
+              clatype="button"
+              data-action="remove"
+            >
+              Remove
+            </button>
+            <button
+              class="section-hero-button"
+              clatype="button"
+              data-action="change"
+            >
+              Change
+            </button>
+          </div>
         </div>
       </section>
 
       <!-- Скрипт до завдання 6-2 -->
-      <script src="./scripts/script-hm6-2.js" type="module"></script>
+      <script
+        src="./scripts/script-02-properties-object.js"
+        type="module"
+      ></script>
     </main>
   </body>
 </html>
