--- a/problem-6-3.html
+++ b/problem-6-3.html
@@ -80,14 +80,17 @@
       <!-- ==================  Завдання 6-3 ================ -->
       <section class="section-layout">
         <div class="container">
-          <h2 class="visually-hidden">6-3</h2>
-
-          <ul class="gallery"></ul>
+          <div class="color-picker js-color-picker">
+            <button class="color-picker-btn" type="button">white</button>
+          </div>
         </div>
       </section>
 
       <!-- Скрипт до завдання 6-3 -->
-      <script src="./scripts/script-hm6-3.js" type="module"></script>
+      <script
+        src="./scripts/script-03-color-picker-btn.js"
+        type="module"
+      ></script>
     </main>
   </body>
 </html>
