--- a/problem-6-1.html
+++ b/problem-6-1.html
@@ -81,40 +81,37 @@
       <section class="section-layout">
         <div class="container">
           <h2 class="visually-hidden">6-1</h2>
-          <ul id="categories">
-            <li class="item">
-              <h2>Animals</h2>
-              <ul>
-                <li>Cat</li>
-                <li>Hamster</li>
-                <li>Horse</li>
-                <li>Parrot</li>
-              </ul>
+
+          <ul class="navigation">
+            <li class="navigation-item">
+              <a class="navigation-item-link">About us</a>
             </li>
-            <li class="item">
-              <h2>Products</h2>
-              <ul>
-                <li>Bread</li>
-                <li>Prasley</li>
-                <li>Cheese</li>
-              </ul>
+            <li class="navigation-item">
+              <a class="navigation-item-link">Portfolio</a>
             </li>
-            <li class="item">
-              <h2>Technologies</h2>
-              <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node.js</li>
-              </ul>
+            <li class="navigation-item">
+              <a class="navigation-item-link">Contacts</a>
             </li>
           </ul>
+
+          <button class="magic-button js-magic-btn" clatype="button">
+            Magic button
+          </button>
         </div>
       </section>
 
       <!-- Скрипт до завдання 6-1 -->
-      <script src="./scripts/script-hm6-1.js" type="module"></script>
+
+      <script
+        src="./scripts/script-01-query-selectors.js"
+        type="module"
+      ></script>
+
+      <!-- Навешивание скрипта на кнопку -->
+      <script
+        src="./scripts/script-01-query-selectors-button.js"
+        type="module"
+      ></script>
     </main>
   </body>
 </html>
