Добавлены 6 упражнений к лекции 6-1 (получение доступа к элементам и создание элементов)

--- a/problem-6-1.html
+++ b/problem-6-1.html
@@ -84,17 +84,21 @@
 
           <ul class="navigation">
             <li class="navigation-item">
-              <a class="navigation-item-link">About us</a>
+              <a class="navigation-item-link" href="./index.html">About us</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-item-link">Portfolio</a>
+              <a class="navigation-item-link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="navigation-item">
-              <a class="navigation-item-link">Contacts</a>
+              <a class="navigation-item-link" href="./contacts.html"
+                >Contacts</a
+              >
             </li>
           </ul>
 
-          <button class="magic-button js-magic-btn" clatype="button">
+          <button class="magic-button js-magic-btn" type="button">
             Magic button
           </button>
         </div>
