--- a/problem-6-2.html
+++ b/problem-6-2.html
@@ -89,23 +89,19 @@
             width="500"
           />
           <div class="section-hero-buttons js-section-hero-buttons">
-            <button
-              class="section-hero-button"
-              clatype="button"
-              data-action="add"
-            >
+            <button class="section-hero-button" type="button" data-action="add">
               Add
             </button>
             <button
               class="section-hero-button"
-              clatype="button"
+              type="button"
               data-action="remove"
             >
               Remove
             </button>
             <button
               class="section-hero-button"
-              clatype="button"
+              type="button"
               data-action="change"
             >
               Change
