--- a/problem-6-3.html
+++ b/problem-6-3.html
@@ -80,17 +80,31 @@
       <!-- ==================  Завдання 6-3 ================ -->
       <section class="section-layout">
         <div class="container">
-          <div class="color-picker js-color-picker">
-            <button class="color-picker-btn" type="button">white</button>
-          </div>
+          <h2 class="visually-hidden">6-3</h2>
+
+          <ul class="navigation">
+            <li class="navigation-item">
+              <a class="navigation-item-link" href="./index.html">About us</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-item-link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-item-link" href="./contacts.html"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+          <button class="magic-button js-accent-btn" type="button">
+            Accent color
+          </button>
         </div>
       </section>
 
       <!-- Скрипт до завдання 6-3 -->
-      <script
-        src="./scripts/script-03-color-picker-btn.js"
-        type="module"
-      ></script>
+      <script src="./scripts/script-03-add-style.js" type="module"></script>
     </main>
   </body>
 </html>
