--- a/problem-6-5.html
+++ b/problem-6-5.html
@@ -80,20 +80,19 @@
       <!-- ==================  Завдання 6-5 ================ -->
       <section class="section-layout">
         <div class="container">
-          <h2 class="visually-hidden">6-5</h2>
-          <div class="input-output-wrapper">
-            <input
-              type="text"
-              id="name-input"
-              placeholder="Please enter your name"
-            />
-            <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+          <h2 class="visually-hidden">6-4</h2>
+
+          <div class="color-picker js-color-picker">
+            <button class="color-picker-btn" type="button">white</button>
           </div>
         </div>
       </section>
 
       <!-- Скрипт до завдання 6-5 -->
-      <script src="./scripts/script-hm6-5.js" type="module"></script>
+      <script
+        src="./scripts/script-05-color-picker-btn.js"
+        type="module"
+      ></script>
     </main>
   </body>
 </html>
