--- a/problem-6-4.html
+++ b/problem-6-4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home-work-06-04</title>
+    <title>home-work-06-05</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -70,7 +70,7 @@
           </li>
           <li class="site-navigation-item">
             <a class="site-navigation-item-link" href="./problem-6-10.html"
-              >Problem 6-10</a
+              >Problem 6-4</a
             >
           </li>
         </ul>
@@ -82,16 +82,30 @@
         <div class="container">
           <h2 class="visually-hidden">6-4</h2>
 
-          <div id="counter">
-            <button type="button" data-action="decrement">-1</button>
-            <span id="value">0</span>
-            <button type="button" data-action="increment">+1</button>
-          </div>
+          <ul class="navigation">
+            <li class="navigation-item">
+              <a class="navigation-item-link" href="./index.html">About us</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-item-link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-item-link" href="./contacts.html"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+
+          <button class="magic-button js-create-elem-btn" type="button">
+            Create element
+          </button>
         </div>
       </section>
 
       <!-- Скрипт до завдання 6-4 -->
-      <script src="./scripts/script-hm6-4.js" type="module"></script>
+      <script src="./scripts/script-04-create-list.js" type="module"></script>
     </main>
   </body>
 </html>
