Добавлен скрипт для создания  карточек товаров

--- a/problem-6-7.html
+++ b/problem-6-7.html
@@ -81,16 +81,21 @@
       <section class="section-layout">
         <div class="container">
           <h2 class="visually-hidden">6-7</h2>
-          <div class="slider-wrapper">
-            <input id="font-size-control" type="range" min="16" max="96" />
-            <br />
-            <span id="text">Abracadabra!</span>
+          <div class="products-container js-products-container">
+            <!-- <article class="product">
+              <h2 class="product-name">Name product</h2>
+              <p class="product-description">Description product</p>
+              <p class="product-price">Price: 1000 грн</p>
+            </article> -->
           </div>
         </div>
       </section>
 
       <!-- Скрипт до завдання 6-7 -->
-      <script src="./scripts/script-hm6-7.js" type="module"></script>
+      <script
+        src="./scripts/script-07-collection-products.js"
+        type="module"
+      ></script>
     </main>
   </body>
 </html>
