Добавлена задача из 7-й лекции (делегирование)

--- a/problem-6-9.html
+++ b/problem-6-9.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home-work-06-09</title>
+    <title>class-work-7-1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -77,20 +77,31 @@
       </div>
     </header>
     <main>
-      <!-- ==================  6-9 ================ -->
+      <!-- ==================  class-work 7-1  ================ -->
       <section class="section-layout">
         <div class="container">
-          <h2 class="visually-hidden">6-9</h2>
+          <h2 class="visually-hidden">class-work 7-1</h2>
 
-          <div class="widget">
-            <p>Background color: <span class="color">-</span></p>
-            <button type="button" class="change-color">Change color</button>
-          </div>
+          <div class="color-cards-container js-color-cards-container">
+
+            <!-- Пример разметки карточки -->
+            <!-- <div class="color-card">
+              <div class="color-swatch" data-hex="#f44336" data-rgb="(95, 158, 160)"            
+                style="background-color: #f44336 ">
+              </div>
+              <div class="color-meta">
+                <p>Hex: #f44336</p>
+                <p>RGB: (95, 158, 160)</p>
+              </div> -->
+
+            </div>
         </div>
+
+      </div>
       </section>
 
-      <!-- Скрипт до завдання 6-9 -->
-      <script src="./scripts/script-hm6-9.js" type="module"></script>
+      <!-- Скрипт до завдання class-work 7-1 -->
+      <script src="./scripts/script-09-cw7-delegating.js" type="module"></script>
     </main>
   </body>
 </html>
